--- a/wiki/horny.wikitext
+++ b/wiki/horny.wikitext
@@ -11,7 +11,7 @@
 ====Synonyms====
 *(''hard or bony''): [[callous]], [[coarse]], [[coarsen]]ed, [[harden]]ed, [[rough]]
 *(''sexually aroused''): [[randy]]
-*(''sexually arousing''): [[hot]]
+*(''sexually arousing''): [[hot]], [[sexy]]
 
 ====Translations====
 
