--- a/wiki/foundation.wikitext
+++ b/wiki/foundation.wikitext
@@ -10,10 +10,9 @@
 #A donation or legacy appropriated to support a charitable institution, and constituting a permanent fund; endowment.
 #That which is founded, or established by endowment; an endowed institution or charity.
 
-{{-trans-}}
-
-:*{{af}}: [[stigting]]
-:*{{nl}}: [[stichting]] {{f}}
+===Translations===
+*{{af}}: [[stigting]]
+*{{nl}}: [[stichting]] {{f}}
 
 [[io:Foundation]]
 [[it:foundation]]
