--- a/wiki/no.wikitext
+++ b/wiki/no.wikitext
@@ -17,7 +17,7 @@
 *French: [[nº]]
 *German: [[Nr.]]
 *Interlingua: [[nº]]
-*Italian: [[nº]], [[n.]], [[nr.]]
+*Italian: [[nº]], [[n.]], [[n.ro]]
 {{mid}}
 *Portuguese: [[nº]]
 *Slovak: [[č.]]
