wikify and expand <simper#188045>

--- a/wiki/simper.wikitext
+++ b/wiki/simper.wikitext
@@ -1,9 +1,9 @@
 ==English==
-== Intransitive Verb ==
-1. To smile in a [[frivolous]], [[self-conscious]] manner.
+===Intransitive Verb===
+# To [[smile] in a [[frivolous]], [[self-conscious]] manner.
 
-== Transitive Verb ==
-1. To express one's self in a frivolous or self-conscious manner.
+===Noun===
+# A frivolous, self-conscious smile.
 
-== Noun ==
-1. A frivolous, self-conscious smile.
+===See also===
+*[[smirk]]
