--- a/wiki/crannock.wikitext
+++ b/wiki/crannock.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
 '''crannock'''
-#An old Irish measure of corn equivalent to the [[quarter]].  The crannock of oats appears to contain two quarters, as sometimes occurs with it's English equivalent.
+#An old Irish measure of corn equivalent to the [[quarter]].  The crannock of oats appears to contain two quarters, as sometimes occurs with its English equivalent.
 #:'''Quotations'''
 #:*'''1866''': In Ireland the crannock is used instead of the quarter.  It is, however, plainly identical with it, being divided into the same number of bushels and pecks. &mdash; James Edwin Thorold Rogers, ''A History of Agriculture and Prices in England'', Volume 1, p. 167.
