--- a/wiki/simper.wikitext
+++ b/wiki/simper.wikitext
@@ -1,8 +1,10 @@
 ==English==
-===Intransitive Verb===
-# To [[smile] in a [[frivolous]], [[self-conscious]] manner.
+===Verb===
+'''to simper'''  (''intransitive'' or ''transitive'')
+# To [[smile]] in a [[frivolous]], [[self-conscious]] manner.
 
 ===Noun===
+'''siper'''
 # A frivolous, self-conscious smile.
 
 ===See also===
