--- a/wiki/cosmopolitan.wikitext
+++ b/wiki/cosmopolitan.wikitext
@@ -1,5 +1,11 @@
 ==English==
 ===Adjective===
+{{wikipedia}}
 '''cosmopolitan'''
-{{cleanup}}
-# When a applied to a city, cosmopolitan signifies that it has an exciting and diverse range of cultural or ethnic variation, expressed perhaps in customs, music , food etc.
+# [[all-inclusive]]; affecting the whole [[world]]
+#(''of a place, or institution'') composed of [[people]] from all over the world
+#(''of a person'') at [[ease]] in any part of the world
+#(''of a plant etc.'') [[growing]] in many parts of the world; widely distributed
+===Noun===
+'''cosmopolitan'''
+# a cosmopolitan person; a [[cosmopolite]]
