Updated to {{CleanupDate|October 2004}} <technomad#512891>

--- a/wiki/technomad.wikitext
+++ b/wiki/technomad.wikitext
@@ -1,5 +1,6 @@
-{{cleanup}}
-
+{{CleanupDate|October 2004}}
+This article should be moved to the [[wiktionary]] but I cannot figure out how to start this process.
+----
 '''Technomad''' is a term coined by [[Steven K. Roberts]] (amateur radio [[Callsign (radio)|call sign]]: N4RVE) to describe a nomadic person who remains connected through communications media, during travel, exploration, and online nomadic living.
 
 ==Early days of "nomadness"==
