--- a/wiki/gay.wikitext
+++ b/wiki/gay.wikitext
@@ -21,7 +21,7 @@ The sense of "homosexual" is said to have come from an Arabic word via French; i
 #:''Don we now our '''gay''' apparel''
 #:''Pennsylvania Dutch include the plain folk and the '''gay''' folk.''
 #[[homosexual]]
-#[[typical]] of [[homosexual]] [[appearance]] or [[behaviour]]
+#[[typical]] of [[homosexual]] [[appearance]] or [[behaviour]] (often in the sterotypical sence)
 #(''pejorative - slang'') [[boring]], [[unappealing]], bad, of low [[quality]], [[annoying]], [[unfair]]
 #:''This game is '''gay'''. Let's play something else.''
 ==== Usage notes ====
