/* Conjugations */ nouns are declined, not conjugated! <civilisation#9155>

--- a/wiki/civilisation.wikitext
+++ b/wiki/civilisation.wikitext
@@ -9,7 +9,7 @@
 ===Noun===
 '''civilisation'''
 #[[civilization]]
-====Conjugations====
+====Declension====
 {| border=1 cellspacing=0 
 | bgcolor=#FFFFF0 colspan=5 align=center | '''Common''' 
 |- 
