/* Translations */ de gender <hiraeth#75286>

--- a/wiki/hiraeth.wikitext
+++ b/wiki/hiraeth.wikitext
@@ -9,5 +9,5 @@
 
 <!-- do not move pt: it is claimed to be the only equivalent word in another language -->
 ====Translations====
-*German: [[Sehnsucht]]
+*German: [[Sehnsucht]] ''f''
 *Portuguese: [[saudade]]
