danish translation <A-bomb#51201>

--- a/wiki/A-bomb.wikitext
+++ b/wiki/A-bomb.wikitext
@@ -13,6 +13,7 @@
 ==== Translations ====
 
 * Chinese: (yuánzĭdàn)
+* Danish: [[atombomb]] ''c''
 * German: [[Atombombe]] ''f''
 * Hebrew: [[פצצה אטומית|פְּצָצָה אֲטוֹמִית]] ''f''
 * Swedish: [[atombomb]] ''c''
