--- a/wiki/blanket_loan.wikitext
+++ b/wiki/blanket_loan.wikitext
@@ -1,1 +1,5 @@
-Also known as a blanket mortgage. A blanket loan is a mortgage lient securing several parcels of property, frequently used by developers who have purchased a single tract of land intending to subdivide into individual parcels. The developer normal requires a "partial release" clause so that individual parcels can be released from the blanket mortgage as they are sold.
+==English==
+===Noun===
+{{wikipedia}}
+'''[[blanket]] [[loan]]'''
+#(''US'') a loan, or [[mortgage]], for multiple [[subdivision]]s of a single [[tract]] of [[land]]
