--- a/wiki/abduct.wikitext
+++ b/wiki/abduct.wikitext
@@ -13,6 +13,8 @@ Latin ''[[abductus]]'', past participle of ''[[abducere]]''. See [[Abduce]].
 *[[abduction]] (noun)
 
 ====Translations====
+
+*Danish: [[bortføre]], [[kidnappe]]
 *Dutch: [[ontvoeren]], [[kidnappen]]
 *German: [[entführen]]
 *[[Irish]]: [[fuadaigh]] (''vn'' -ach)
