--- a/wiki/abduct.wikitext
+++ b/wiki/abduct.wikitext
@@ -14,7 +14,7 @@ Latin ''[[abductus]]'', past participle of ''[[abducere]]''. See [[Abduce]].
 
 ====Translations====
 
-*Danish: [[bortføre]], [[kidnappe]]
+*Danish: [[bortføre]](1), [[kidnappe]](1)
 *Dutch: [[ontvoeren]], [[kidnappen]]
 *German: [[entführen]]
 *[[Irish]]: [[fuadaigh]] (''vn'' -ach)
