a COLOUR - needs expanding by you know who <blaze orange#81318>

--- a/wiki/blaze_orange.wikitext
+++ b/wiki/blaze_orange.wikitext
@@ -1,1 +1,5 @@
-Blaze orange is a shade of orange used on the tips of barrels of such replica guns as airsoft guns, or simply cap or toy guns.
+==English==
+===Noun===
+{{wikipedia}}
+'''[[blaze]] [[orange]]'''
+# a [[bright]] [[shade]] of [[orange]]
