/* Noun */ ; +2 meanings <casa#28219>

--- a/wiki/casa.wikitext
+++ b/wiki/casa.wikitext
@@ -9,6 +9,8 @@ From Latin '''casa'''
 # [[home]]
 # [[shop]]
 # (''boardgame'') [[square]]
+# [[family]], [[dynasty]], [[descent]], [[extraction]], [[stock]], [[lineage]], [[birth]], [[origin]], [[race]] (not human 'race' (black, white, ...), but meaning the preceding words)
+# [[company]], [[firm]]
 
 ====Synonyms====
 *[[abitazione]]
