/* Italian */ , +1 saying <casa#28219>

--- a/wiki/casa.wikitext
+++ b/wiki/casa.wikitext
@@ -16,6 +16,11 @@ From Latin '''casa'''
 *[[abitazione]]
 *[[dimora]]
 
+====Sayings====
+'''Casa, dolce casa'''
+
+#home, sweet home
+
 ===Related terms===
 *[[casale]]
 *[[casalinga]]
@@ -24,6 +29,7 @@ From Latin '''casa'''
 *[[casata]]
 
 ----
+
 ==Latin==
 ===Noun===
 '''casa''' ''f'', genitive '''[[casae]]'''
