--- a/wiki/charge_hand.wikitext
+++ b/wiki/charge_hand.wikitext
@@ -1,1 +1,1 @@
-A charge hand is the British English term for the deputy to a foreman in a factory
+A '''charge hand''' is the [[United Kingdom|British]] [[English]] term for the deputy to a foreman in a [[factory]].
