--- a/wiki/fall_streaks.wikitext
+++ b/wiki/fall_streaks.wikitext
@@ -1,5 +1,7 @@
 '''Fall streaks''' are falling [[ice crystals]] that [[evaporate]] before reaching the ground.
 
+{{Climate-stub}}
+
 ==See also==
 * [[Virga]]
 
