dodge redirect <FUBAR#38982>

--- a/wiki/FUBAR.wikitext
+++ b/wiki/FUBAR.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-Originated as slang in the U.S. Army in the Second World War. The first word is sometimes [[Bowdlerized]] as ''Fouled''.
+Originated as slang in the U.S. Army in the Second World War. The first word is sometimes [[bowdlerize|Bowdlerized]] as ''Fouled''.
 
 ===Adjective===
 '''fubar''' or '''FUBAR'''
