--- a/wiki/shroff.wikitext
+++ b/wiki/shroff.wikitext
@@ -1,5 +1,5 @@
-'''Noun'''
+==English==
+===Noun===
+'''shroff'''
 
-shroff
-
-1. Cashier at a car park. (Hong Kong)
+# Cashier at a car park. (Hong Kong)
