--- a/wiki/co-locate.wikitext
+++ b/wiki/co-locate.wikitext
@@ -1,3 +1,4 @@
-Co-locate: to locate hardware within another company's facilities.
-
-Computing companies in particular often choose to rent space within another company's facilities to afford them access to internet backbones and secure facilities they could otherwise not afford or are unatainable in their own facilities.
+==English==
+===Verb===
+'''co-locate'''
+# To locate [[hardware]] within another [[company]]'s [[facilities]].
