--- a/wiki/baker.wikitext
+++ b/wiki/baker.wikitext
@@ -12,6 +12,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Chinese: [[麵包師]], [[面包师]]
+*{{dk}}: [[bager]] ''c''
 *Dutch: [[bakker]] ''de''
 *French: [[boulanger]] ''m'', [[boulangère]] ''f''
 *German: [[Bäcker]] ''m''
