--- a/wiki/salt_shaker.wikitext
+++ b/wiki/salt_shaker.wikitext
@@ -8,5 +8,8 @@ From [[salt]] + [[shaker]]
 
 # A small [[container]] designed to hold salt and [[facilitate]] [[sprinkling]] it on food for [[seasoning]] purposes.
 
+====Translations====
+*{{dk}}: [[saltbøsse]] ''c''
+
 ===Related terms===
 * [[pepper shaker]]
