--- a/wiki/DINK.wikitext
+++ b/wiki/DINK.wikitext
@@ -4,5 +4,4 @@ __TOC__
 === {{acronym}} ===
 '''DINK'''
 
-# “Double Income No Kids” or “Dual Income No Kids”
-{{stub}}
+# Double Income No Kids - a childless couple with two jobs
