cleanup <Oscar the Grouch#652884>

--- a/wiki/Oscar_the_Grouch.wikitext
+++ b/wiki/Oscar_the_Grouch.wikitext
@@ -1,2 +1,4 @@
-Grumpy character fropm [[Sesame Street]] who is actually just [[misunderstood]].
-{{rfc}}
+==English==
+===Proper noun===
+'''oscar the grouch'''
+#  A grumpy character from [[Sesame Street]] who is actually just [[misunderstood]]
