--- a/wiki/DINK.wikitext
+++ b/wiki/DINK.wikitext
@@ -1,7 +1,6 @@
-''See also: [[dink]]''
-__TOC__
+:''see also:'' [[DINK]]
 ==English==
-=== {{acronym}} ===
-'''DINK'''
-
-# Double Income No Kids - a childless couple with two jobs
+===Noun===
+'''dink'''
+#{{tennis}} a [[drop shot]]
+#(''US military in Vietnam'', ''offensive slang'') a North Vietnamese [[soldier]]
