--- a/wiki/NPOV.wikitext
+++ b/wiki/NPOV.wikitext
@@ -1,5 +1,10 @@
 ==English==
 
-==={{initialism}}===
+===Pronunciation===
+{{wikipedia}}
+/en-pauve/
+*{{audio|Image:Wikiwikithink.ogg|Wiki theme song with NPOV towards end}}
+
+==={{acronym}}===
 '''npov''' or [[NPOV]]
-#Neutral Point Of View - the guideline of all [[Wikipedia]] and [[Wiktionary]] articles
+# Neutral Point Of View - the guideline of all [[Wikipedia]] and [[Wiktionary]] articles.
