add link to Wikipedia <Oscar the Grouch#652884>

--- a/wiki/Oscar_the_Grouch.wikitext
+++ b/wiki/Oscar_the_Grouch.wikitext
@@ -1,4 +1,5 @@
 ==English==
 ===Proper noun===
-'''oscar the grouch'''
-#  A grumpy character from [[Sesame Street]] who is actually just [[misunderstood]]
+{{wikipedia}}
+'''Oscar the Grouch'''
+#  A [[Muppet]] character from [[Sesame Street]] who lives in a [[garbage can]]
