--- a/wiki/bake.wikitext
+++ b/wiki/bake.wikitext
@@ -21,6 +21,7 @@
 ====Translations====
 *Chinese: [[烘烤]]
 *Czech: [[péci]], [[péct]]
+*{{dk}}: [[bage]]
 *Dutch: [[bakken]]
 *French: faire cuire au four
 *German: [[backen]]
