--- a/wiki/wormhole.wikitext
+++ b/wiki/wormhole.wikitext
@@ -12,6 +12,7 @@ By analogy with a worm travelling from one side of an apple to the other through
 
 ====Translations====
 *Finnish: [[madonreikä]] (1)
+*Portuguese: [[buraco de minhoca]]
 
 ===See also===
 *[[w:Wormhole|Wikipedia article on wormholes]]
