--- a/wiki/psyche.wikitext
+++ b/wiki/psyche.wikitext
@@ -1,9 +1,26 @@
 ==English==
 {{wikipedia}}
-{{rfc}}
+===Noun===
+'''Psyche'''
+# In [[psychology]] and related fields, the psyche is the entirety of the [[non-physical]] aspects of a person
+# In late Greek art and literature, a goddess who is the [[personification]] of the [[soul]]; she is primarily known for her role in the story of Cupid and Psyche, best attested in Apuleius' novel The Golden Ass
+
 ===Proper Noun===
 '''Psyche'''
+# 16 Psyche, an [[asteroid]]
+# A [[Gothic]] band
+# An album by British band Ant and Dec
+# A code name for Red Hat Linux 8.0
+# (Greek and Roman mythology) [[name]] of a girl loved by [[Cupid]] (or [[Eros]])
+# Psychidae, or Bagworms, a family of Lepidoptera
 
-(Greek and Roman mythology) [[name]] of a girl loved by [[Cupid]] (or [[Eros]]).
+===Prefix===
+'''psycho-''' or '''psyche-'''
+# Common English prefixes for mind or soul-related concepts.
+
+==Greek==
+===Noun===
+'''Psyche'''
+# A Greek word (also spelled Psykhe or Psukhe) which means either "soul" or "butterfly"
 
 [[pl:Psyche]]
