--- a/wiki/NPOV.wikitext
+++ b/wiki/NPOV.wikitext
@@ -3,7 +3,7 @@
 ===Pronunciation===
 {{wikipedia}}
 /en-pauve/
-*{{audio|Image:Wikiwikithink.ogg|Wiki theme song with NPOV towards end}}
+*{{audio|Wikiwikithink.ogg|Wiki theme song with NPOV towards end}}
 
 ==={{acronym}}===
 '''npov''' or [[NPOV]]
