--- a/wiki/Perseus.wikitext
+++ b/wiki/Perseus.wikitext
@@ -1,7 +1,6 @@
-'''{{rfc}} stub --[[User:HiFlyer|HiFlyer]] 04:44, 10 Jan 2005 (UTC)'''
-
-
-'''PERSEUS'''
-Ancient mythological Greek warrior who slew the Gorgon Medusa by decapitating her. He knew where to strike by the means of using his shield as a mirror to see her face.
+==English==
+===Proper noun===
+'''Perseus'''
+# Ancient [[mythological]] [[Greek]] [[warrior]] who slew the [[Gorgon Medusa]] by [[decapitating]] her. He knew where to strike by the means of using his [[shield]] as a [[mirror]] to see her face.
 
 [[gl:Perseus]]
