--- a/wiki/NPOV.wikitext
+++ b/wiki/NPOV.wikitext
@@ -1,9 +1,9 @@
 ==English==
 
 ===Pronunciation===
-{{wikipedia}}
+{{wikipediapar|Wikipedia:Neutral point of view}}
 /en-pauve/
-*{{audio|Wikiwikithink.ogg|Wiki theme song with NPOV towards end}}
+*[http://commons.wikimedia.org/wiki/Image:Wikiwikithing.ogg Wiki theme song with NPOV towards end]
 
 ==={{acronym}}===
 '''npov''' or [[NPOV]]
