--- a/wiki/Saudi.wikitext
+++ b/wiki/Saudi.wikitext
@@ -1,1 +1,11 @@
-#redirect [[Saudi]]
+==English==
+===Noun===
+'''saudi'''
+# A person from [[Saudi Arabia]] or of Saudi Arabian descent.
+
+===Adjective===
+'''saudi'''
+# From, or pertaining to Saudi Arabia, the Saudi Arabian people or language.
+
+===See also===
+* [[Saudi Arabian]]
