--- a/wiki/chainring.wikitext
+++ b/wiki/chainring.wikitext
@@ -3,4 +3,4 @@
 ===Noun===
 '''chainring'''
 
-A bicycle chainring consists of one or more [[gear]]s that are driven by the [[crank]]s and pedals of the bicycle. This relatively large gear connected by a [[chain]] to a relatively small gear on the rear wheel increases the [[mechanical advantage]] of the bicycle.
+A bicycle chainring consists of one or more [[sprocket]]s that are driven by the [[crank]]s and pedals of the bicycle. This relatively large sprocket connected by a [[chain]] to a relatively small sprocket on the rear wheel increases the [[mechanical advantage]] of the bicycle.
