--- a/wiki/albino.wikitext
+++ b/wiki/albino.wikitext
@@ -1,3 +1,9 @@
+==Danish==
+=== Noun ===
+[[Category:Danish nouns]]
+'''albino''' ''c'' (''plural'' [[albinoer]])
+# a person lacking in skin and hair pigmentation
+
 ==English==
 === Etymology ===
 From {{L.}} [[albus]] via {{Pg.}} [[albo]], "[[white]]"
