added "found in southeastern Finland" <rapakivi#77102>

--- a/wiki/rapakivi.wikitext
+++ b/wiki/rapakivi.wikitext
@@ -1,6 +1,6 @@
 ==English==
 === Noun ===
 '''rapakivi'''
-#A form of [[granite]]
+#A form of [[granite]] found in southeastern Finland
 [[Category:Finnish derivations]]
 [[Category:English nouns]]
