--- a/wiki/bakery.wikitext
+++ b/wiki/bakery.wikitext
@@ -10,7 +10,7 @@
 
 ====Translations====
 *Chinese: [[麵包店]], [[面包店]]
-*Danish: [[bageri]] ''f''
+*Danish: [[bageri]] ''n''
 *Dutch: [[bakkerij]] ''f''
 *French: [[boulangerie]] ''f''
 *German: [[Bäckerei]] ''f''
