--- a/wiki/seize.wikitext
+++ b/wiki/seize.wikitext
@@ -20,6 +20,7 @@
 
 ====Translations====
 *Chinese Characters: [[揢]]
+*{{dk}}: [[gribe]] (1,2)
 *Dutch: [[grijpen]] (1,2), [[vangen]] (1), [[aangrijpen]] (2), [[pakken]] (1)
 *Latin: [[capio]] (1)
 ----
