portuguese meaning <albino#47607>

--- a/wiki/albino.wikitext
+++ b/wiki/albino.wikitext
@@ -12,6 +12,15 @@ From {{L.}} [[albus]] via {{Pg.}} [[albo]], "[[white]]"
 '''albino''' (''plural'' [[albinos]])
 # a person lacking in skin and hair pigmentation
 
+==Portuguese==
+[[Category:Portuguese nouns]]
+[[Category:Portuguese adjectives]]
+'''albino''' ''m'', [[albina]] ''f'', [[albinos]] ''masc. plural'', [[albinas]] ''fem. plural''
+===Adjective===
+#[[albino]]
+===Noun===
+#[[albino]]
+
 ==Romanica==
 [[Category:Romanica language]]
 ===Adjective===
