/* Translations */ pt <roast#46713>

--- a/wiki/roast.wikitext
+++ b/wiki/roast.wikitext
@@ -18,6 +18,7 @@
 *German: [[braten]]
 *Greek: [[ψήσει]]
 *Italian: [[arrostire]]
+*Portuguese: [[assar]]
 *Russian: [[зажарить]] (zazharit')
 *Spanish: [[asar]]
 
