/* Translations */ pt <bake#50242>

--- a/wiki/bake.wikitext
+++ b/wiki/bake.wikitext
@@ -27,7 +27,7 @@
 *German: [[backen]]
 *Greek: [[ψήσει]]
 *Italian: [[cuocere]]
-*Portuguese: [[cozer]]
+*Portuguese: [[cozer]], (brazil)[[cozinhar]]
 *Russian: [[испечь]] (ispech')
 *Spanish: cocer al horno
 
